Change size of description to match image above it.
Changed the width and margin of the description to position it inline with the image above.

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,20 @@
+* {
+    text-align: center;
+}
+
 body {
     background-color: #f1caaa;
 }
 
 a:visited {
     color: #a6652d;
+}
+
+ul, li {
+    list-style-position: inside;
+}
+
+.description {
+    width: 75%;
+    margin: 0 auto;
 }
